k8s/customer-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-api
  template:
    metadata:
      labels:
        app: customer-api
    spec:
      containers:
        - name: customer-api
          image: zivklein21/customer-api:v4
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: customer-api
spec:
  selector:
    app: customer-api
  ports:
    - port: 80
      targetPort: 8080
